# escargot

./: .gitignore  README.md  pyproject.toml
.github/workflows/: publish_package.yml
agents/: config.py  cyphergpt.py  dataexplorer.py  multiagent_management.ipynb  utils.py
benchmarking/: benchmarking.py
benchmarking/dataset/: True_or_False_2hop.json
benchmarking/notebooks/: benchmarking.ipynb  benchmarking_chatgpt3.5.py  benchmarking_chatgpt3.5_RAG.py
benchmarking/notebooks/VectorEmbeddingSearchingNick_v1/: .env.sample  VectorEmbeddingSearching.py  embed.py
benchmarking/results/: Base_responses.pkl  Escargot_OpenEnded_responses.pkl  Escargot_True_or_False_responses.pkl  RAG_responses.pkl  full_simplified_questions.pkl  score_data_MCQ_1hop.csv  score_data_MCQ_2hop.csv
escargot/: __init__.py  escargot.py  utils.py
escargot/coder/: coder.py
escargot/controller/: controller.py
escargot/cypher/: __init__.py  memgraph.py  neo4j.py
escargot/language_models/: __init__.py  abstract_language_model.py  azuregpt.py  chatgpt.py  ollama.py
escargot/memory/: __init__.py  memory.py
escargot/multiagent/: __init__.py  multiagent_manager.py  utils.py
escargot/operations/: __init__.py  graph_of_operations.py  operations.py  thought.py  utils.py
escargot/parser/: __init__.py  parser.py  utils.py
escargot/prompter/: __init__.py  prompter.py
escargot/vector_db/: __init__.py  weaviate.py
examples/: alzkb_got_dynamic.ipynb
