[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "escargot"
version = "0.0.3"
authors = [
  { name="Nicholas Matsumoto", email="nicholas.matsumoto@csmc.edu" }
]
description = "Python package for ESCARGOT that enables solving elaborate problems with LLMs and Knowledge Graphs"
readme = "README.md"
license = {file = "LICENSE"}
requires-python = ">=3.9"
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: OS Independent",
]
dependencies = [
  "openai>=1.0.0,<2.0.0",
  "numpy>=1.24.3,<2.0.0",
  "pandas>=2.0.3,<3.0.0",
  "gqlalchemy>=1.5.1",
  "backoff>=2.2.1,<3.0.0",
  "weaviate-client>=4.6.5",
  "dill>=0.3.8",
  "chromadb>=0.5.5",
  "matplotlib>=3.9.1",
  "seaborn>=0.11.2",
  "scikit-learn>=1.0.1",
]

[project.urls]
Homepage = "https://github.com/EpistasisLab/escargot"

[project.scripts]
